reduce img size

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="card-body">
             <h5 class="card-title">Daily photo</h5>
             <p class="card-text">Thanks to the NASA api you can see the Astronomy Picture of the Day.</p>
-            <a href="#" class="btn btn-primary">Today's photo</a>
+            <a href="#imageSection" class="btn btn-primary">Today's photo</a>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
           <div class="card-body">
             <h5 class="card-title">Section</h5>
             <p class="card-text">This section will use another api from nasa, at the moment it is in development.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">In process</a>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
         <label for="date">Date:</label>
         <input type="text" class="form-control" id="date">
       </div>
-      <h2 class="msg text-center h5 container">You must write the date in the follow format YYYY-MM-DD</h4>
+      <h2 class="msg text-center h5 container">You must write the date in the follow format YYYY-MM-DD and after 1995</h4>
       <h1 class="text-center mb-5 mt-5 title">Tiulo de la imagen</h1>
       <p class="text-center info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, error aperiam possimus ratione eaque iure officia commodi corrupti doloribus facere asperiores quas, eligendi soluta quidem cum pariatur ipsam laudantium tenetur.</p>
     </div>
