--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
   <!--Animation CSS-->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="icon" href="./img/nasa-ico.ico">
 
   <title>Nasa web</title>
 </head>
